--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
   "bugs": {
     "url": "https://github.com/CheezItMan/js-game/issues"
   },
-  "homepage": "https://github.com/CheezItMan/js-game#readme"
+  "homepage": "https://github.com/CheezItMan/js-game#readme",
+  "devDependencies": {
+    "parcel-bundler": "^1.12.4"
+  }
 }
