--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A front-end JS game",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "dev": "parcel src/index.html"
   },
   "repository": {
     "type": "git",
@@ -19,7 +20,9 @@
     "url": "https://github.com/CheezItMan/js-game/issues"
   },
   "homepage": "https://github.com/CheezItMan/js-game#readme",
+  "dependencies": {},
   "devDependencies": {
+    "jest": "^26.1.0",
     "parcel-bundler": "^1.12.4"
   }
 }
