--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {},
   "devDependencies": {
     "jest": "^26.1.0",
-    "parcel-bundler": "^1.12.4"
+    "parcel-bundler": "^1.12.4",
+    "prettier": "^2.0.5"
   }
 }
